force-app/main/default/objects/Table_Export_Setting__mdt/Table_Export_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Table Export Setting</label>
    <pluralLabel>Table Export Settings</pluralLabel>
</CustomObject>