force-app/main/default/objects/Table_Export_Setting__mdt/fields/Batch_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Chunk_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Batch Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>