force-app/main/default/objects/Table_Export_Setting__mdt/fields/Client_Export_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Client_Export_Threshold__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Client Export Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>