force-app/main/default/objects/Table_Export_Setting__mdt/fields/Export_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Export_Retention_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Export Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>