force-app/main/default/objects/Table_Export_Setting__mdt/fields/Matrix_Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Aggregate_Limit__c</fullName>
    <defaultValue>45000</defaultValue>
    <label>Matrix Aggregate Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>