force-app/main/default/objects/Table_Export_Setting__mdt/fields/Matrix_Cursor_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Cursor_Chunk_Size__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>Matrix Cursor Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>