force-app/main/default/objects/Table_Export_Setting__mdt/fields/Matrix_Max_Interactive_Cells__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Max_Interactive_Cells__c</fullName>
    <defaultValue>50000</defaultValue>
    <label>Matrix Max Interactive Cells</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>