force-app/main/default/objects/Table_Export_Setting__mdt/fields/Matrix_XLSX_Safe_Limit__c.field-meta.xml
<CustomField>
    <fullName>Matrix_XLSX_Safe_Limit__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>Matrix XLSX Safe Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>