force-app/main/default/objects/Table_Export_Setting__mdt/fields/Max_CSV_Chunk_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Max_CSV_Chunk_Size_MB__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Max CSV Chunk Size (MB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>