force-app/main/default/objects/Table_Export_Setting__mdt/fields/Max_Standard_Export_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Standard_Export_Rows__c</fullName>
    <defaultValue>1000000</defaultValue>
    <label>Max Standard Export Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>