force-app/main/default/objects/Table_Export_Setting__mdt/fields/Sync_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sync_Row_Limit__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Sync Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>